# wallpaper-client

./: 0.4.2  README.md  angular.json  index.html  package.json  pnpm-lock.yaml
.github/workflows/: dev.yml
src/: index.html  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-11-19-053546_create_bing/: down.sql  up.sql
src-tauri/src/: main.rs
src-tauri/src/dao/: db.rs  mod.rs  models.rs  schema.rs  wallpaper_dao.rs
src-tauri/src/router/: handlers.rs
src-tauri/src/service/: get_img_service.rs  mod.rs  trans_service.rs
src-tauri/src/system/: mod.rs  tray.rs
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
src/app/bing/: bing.component.html  bing.component.spec.ts  bing.component.ts
src/app/enum/: message-type.ts
src/app/menu/: menu.component.css  menu.component.html  menu.component.ts
src/app/microsoft/: microsoft.component.html
src/app/modal/: message.ts  payload.ts  wallpaper.ts
src/app/plugins/wallpaper-view/: wallpaper-view.component.html  wallpaper-view.component.ts
src/app/service/: drop-down.service.ts  message.service.ts
src/app/wallpaper/: wallpaper.component.ts
