[package]
name = "wallpaper-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "protocol-asset", "shell-open", "dialog-open", "dialog-ask", "dialog-message", "clipboard-all", "window-all", "system-tray", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = {version = "2.1.4", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
chrono = {version = "0.4.31", features = ["serde"] }
rand = "0.8.5"
enquote = "1.1.0"
reqwest = {version = "0.11.22", features = ["json", "stream", "blocking"] }
htmler = "0.1.1"
anyhow = "1.0.75"
tokio = "1.34.0"
futures-util = "0.3.29"
futures-core = "0.3.29"
actix-rt = "2.9.0"
lazy_static = "1.4.0"
uuid = { version = "1.5.0", features = ["v4"] }
md5 = "0.7.0"
base64 = "0.21.5"
aes = "0.7.4"
block-modes = "0.8.1"
diesel_migrations = "2.1.0"
dirs = "5.0.1"
rayon = "1.8.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
